[#163166350] Validate payload schemas
