# account_service/controllers/accounts.py
@@ -1,4 +1,5 @@
 from flask import request, jsonify, Blueprint, current_app
+from schema import Schema, SchemaError, And
 
 from account_service.domain import commands
 from account_service.domain.account import Account
@@ -6,38 +7,65 @@ from account_service.domain.errors import CustomerNotFound, AccountNotFound
 
 accounts = Blueprint('accounts', __name__, url_prefix='/accounts/')
 
+POST_ACCOUNT_PAYLOAD_SCHEMA = Schema({'customerId': And(str, len)})
 
-@accounts.route('/<string:account_number>', methods=['GET'])
+
+@accounts.route('/<int:account_number>', methods=['GET'])
 def get_account(account_number):
-    try:
-        account = commands.get_account(
-            account_number=int(account_number),
-            account_repository=current_app.account_repository)
+    account = commands.get_account(
+        account_number=account_number,
+        account_repository=current_app.account_repository)
 
-        return jsonify(accountNumber=account.formatted_account_number,
-                       accountStatus=account.account_status,
-                       customerId=account.customer_id)
-    except AccountNotFound:
-        return jsonify(message='Not found'), 404
+    return jsonify(accountNumber=account.formatted_account_number,
+                   accountStatus=account.account_status,
+                   customerId=account.customer_id)
 
 
 @accounts.route('/', methods=['POST'])
 def post_account():
+    if not request.is_json:
+        raise ContentTypeError()
+
     body = request.get_json()
+
+    POST_ACCOUNT_PAYLOAD_SCHEMA.validate(body)
+
     customer_id = body['customerId']
 
     account = Account(account_status='active',
                       customer_id=customer_id)
-    try:
-        commands.create_account(
-            account=account,
-            account_repository=current_app.account_repository,
-            customer_client=current_app.customer_client)
 
-        return jsonify({
-            'customerId': customer_id,
-            'accountNumber': account.formatted_account_number,
-            'accountStatus': 'active'
-        }), 201
-    except CustomerNotFound:
-        return jsonify(message='Customer not found'), 400
+    commands.create_account(
+        account=account,
+        account_repository=current_app.account_repository,
+        customer_client=current_app.customer_client)
+
+    return jsonify({
+        'customerId': customer_id,
+        'accountNumber': account.formatted_account_number,
+        'accountStatus': 'active'
+    }), 201
+
+
+@accounts.errorhandler(AccountNotFound)
+def account_not_found(e):
+    return jsonify(message='Not found'), 404
+
+
+@accounts.errorhandler(CustomerNotFound)
+def customer_not_found(e):
+    return jsonify(message='Customer not found'), 400
+
+
+@accounts.errorhandler(SchemaError)
+def schema_error(e):
+    return jsonify(message=str(e)), 400
+
+
+class ContentTypeError(RuntimeError):
+    pass
+
+
+@accounts.errorhandler(ContentTypeError)
+def content_type_error(e):
+    return jsonify(message='Request must be application/json'), 400
